tests/NormalTests/paczka1/fuzzy1/43633884.err
Error in line 1: jdhg0ltuY S375 33,2
Error in line 9: CFv7I6vDs4r S738 791,0
Error in line 12: A722 S466 411,9
Error in line 11: jdhg0ltuY A722 99,8
Error in line 13: A722 S375 68,0
Error in line 14: jdhg0ltuY S375 8,6
Error in line 19: jdhg0ltuY S738 67,4
Error in line 10: CFv7I6vDs4r S375 10,4
Error in line 21: KVYpHdWR9g S466 38,7
Error in line 25: jWd S375 97,1
